associate reports with current user and only show their reports

--- a/lib/koi_web/live/report_live/form_component.html.heex
+++ b/lib/koi_web/live/report_live/form_component.html.heex
@@ -16,6 +16,8 @@
     <%= label f, :notes %>
     <%= text_input f, :notes %>
     <%= error_tag f, :notes %>
+
+    <%= hidden_input f, :user_id %>
   
     <div>
       <%= submit "Save", phx_disable_with: "Saving..." %>
